microservices/micro-collector/deployment-docker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-collector
  labels:
    app: micro-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-collector
  template:
    metadata:
      labels:
        app: micro-collector
    spec:
      containers:
        - name: micro-collector
          image: ljx213101212/micro-collector:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: micro-collector
  labels:
    app: micro-collector
spec:
  ports:
    - port: 8080
  selector:
    app: micro-collector
